# cpp-microservice

./: .dockerignore  .env.template  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.test  IMPLEMENTATION.md  README.md  docker-compose.yml  historical_tracking.csv  penalty_tracking.md  setup-template-project.sh  trend_analysis.md
.config/: secrets.conf
.github/workflows/: ci.yml
common/base-service/: CMakeLists.txt
common/base-service/include/: base_service.hpp  base_service_server.hpp
common/base-service/src/: base_service_server.cpp
common/base-service/tests/: base_service_grpc_test.cpp  base_service_test.cpp
config/: base_service.json
docs/: architecture_overview.md  error_handling.md  standards.md  test_case_template.md  test_plan_template.md
examples/: error_handling_example.cpp
include/project/: error_handling.hpp  logging.hpp
include/project/common/: types.hpp
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
proto/base_service/: base_service.proto
scripts/: setup-dev.sh
services/base-service/: CMakeLists.txt
services/base-service/src/: main.cpp
src/: error_handling.hpp
tests/: test_errors.cpp
